fix: body scroll bar on small screen when tooltip animate fix: scroll not reseting when navigating to other pages style: scenario parameters info button style: demolition EC label change

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,7 +12,7 @@ html {
 
 body {
   background-color: hsl(var(--background));
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 }
 
